--- a/extension/templates/index.html
+++ b/extension/templates/index.html
@@ -3,33 +3,35 @@
 
 <head>
 	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookMark Manager</title>
-	<link rel="stylesheet" href="../css/styles.css">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1.0">
+	<title>BookMark Manager</title>
+	<link rel="stylesheet"
+		href="../css/styles.css">
 	<script src="../js/lib/jquery.min.js"></script>
 	<script src="../js/index.js"></script>
 </head>
 
 <body>
-  <header>
-	<!-- <h1 class="header-title"></h1> -->
-</header>
-<main>
-	<section class="nav-pane">
-		<!-- <h2 class="nav-pane-title">Categories</h2> -->
-		<p>nav1</p>
-		<p>nav2</p>
-		<p>nav3</p>
-		<p>nav4</p>
-		<p>nav5</p>
-	</section>
-	<section class="display-pane">
-		<p>mark1</p>
-		<p>mark2</p>
-		<p>mark3</p>
-		<p>mark4</p>
-		<p>mark5</p>
-	</section>
+	<header>
+		<!-- <h1 class="header-title"></h1> -->
+	</header>
+	<main>
+		<section class="nav-pane">
+			<!-- <h2 class="nav-pane-title">Categories</h2> -->
+			<p>nav1</p>
+			<p>nav2</p>
+			<p>nav3</p>
+			<p>nav4</p>
+			<p>nav5</p>
+		</section>
+		<section class="display-pane">
+			<p>mark1</p>
+			<p>mark2</p>
+			<p>mark3</p>
+			<p>mark4</p>
+			<p>mark5</p>
+		</section>
 
 </body>
 
