--- a/extension/templates/settings.html
+++ b/extension/templates/settings.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Extension Options</title>
-  <style>
+	<title>Extension Options</title>
+	<style>
 
-  </style>
-  <script src="js/settings.js"></script>
+	</style>
+	<script src="js/settings.js"></script>
 </head>
-<body>
-  <h1>Extension Options</h1>
-  <form id="optionsForm">
-    <label for="setting1">Setting 1:</label>
-    <input type="text" id="setting1">
-    <br>
-    <label for="setting2">Setting 2:</label>
-    <input type="checkbox" id="setting2">
-    <br>
-    <button type="submit">Save</button>
-  </form>
-  <script src="options.js"></script>
-</body>
-</html>
 
+<body>
+	<h1>Extension Options</h1>
+	<form id="optionsForm">
+		<label for="setting1">Setting 1:</label>
+		<input type="text"
+			id="setting1">
+		<br>
+		<label for="setting2">Setting 2:</label>
+		<input type="checkbox"
+			id="setting2">
+		<br>
+		<button type="submit">Save</button>
+	</form>
+	<script src="options.js"></script>
+</body>
+
+</html>
