--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet"
 		href="../css/style.css">
 	<script src="../js/lib/jquery.min.js"></script>
-	<script src="../js/index.js"></script>
+	<script type="module"
+		src="../js/index.js"></script>
 	<title>Linksway</title>
 </head>
 
@@ -28,29 +29,41 @@
 		</div>
 	</header>
 	<!---sidebar container-->
-	<div class="form-container">
+	<form class="form-container"
+		method="POST"
+		action="/">
 		<div class="bookmark-form">
 			<div class="form-group">
 				<label for="url">URL</label>
 				<input type="text"
 					id="url"
+					class="url-input"
 					placeholder="URL">
 			</div>
 			<div class="form-group">
-				<label for="categories">Categories</label>
-				<select id="categories">
-					<option value="default">DEFAULT</option>
+				<label for="categories">Categories (Optional)</label>
+				<select id="categories"
+					class="category-select">
+					<!--
+						NOTE: Choosing default has no real effect.
+						All bookmarks also belong to the default category.
+					-->
+					<option value="default">Default</option>
+					<option value="cat-1">Cate 1</option>
+					<option value="cat-2">Cate 2</option>
 				</select>
 			</div>
 			<div class="form-group">
-				<label for="description">Description</label>
+				<label for="description">Description (Optional)</label>
 				<input type="text"
 					id="description"
-					placeholder="Description">
+					class="description-input"
+					placeholder="Description (optional)">
 			</div>
-			<button class="create-button">Create</button>
+			<button type="submit"
+				class="create-button">Create</button>
 		</div>
-	</div>
+	</form>
 	<div class="container">
 		<aside>
 			<div class="sidebar-header">
