--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -10,7 +10,7 @@
     <!--header structure-->
     <header>
         <a href="index.html">
-            <img src="LOGO2.png" alt="Logo">
+            <img src="img/icons/LOGO2.png" alt="Logo">
         </a>
         <div class="user-menu">
             <div class="profile-icon"></div>
