--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Bookmark Manager</title>
 </head>
 <body>
     <!--header structure-->
     <header>
         <a href="index.html">
-            <img src="img/icons/LOGO2.png" alt="Logo">
+            <img src="../img/icons/LOGO2.png" alt="Logo">
         </a>
         <div class="user-menu">
             <div class="profile-icon"></div>
