update landing page

--- a/landing/css/spectre.css
+++ b/landing/css/spectre.css
@@ -1542,6 +1542,7 @@ video.video-responsive::before {
   flex-wrap: wrap;
   margin-left: -0.4rem;
   margin-right: -0.4rem;
+  margin-top: -5rem;
 }
 
 .columns.col-gapless {
@@ -3649,3 +3650,12 @@ a.text-error:visited {
   word-break: break-word;
   word-wrap: break-word;
 }
+
+.columnss {
+  display: flex;
+  display: -ms-flexbox;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-left: -0.4rem;
+  margin-right: -0.4rem;
+  margin-top: -5rem;
