--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-   
+
     <title>Bookmark Manager</title>
 </head>
 <body>
     <!--header structure-->
     <header>
         <a href="index.html">
-            <img src="../img/logo4 (5).png" alt="Logo">
+            <img src="../img/logo4_(5).png" alt="Logo">
         </a>
         <div class="user-menu">
             <div class="profile-icon"></div>
