--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -106,8 +106,9 @@
       </div>
     </div>
 	<div class="background-video-iframe-container">
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID?autoplay=0&amp;controls=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+		<!-- <iframe class="background-video-iframe" src="https://www.youtube.com/embed/AMekR_EwpOA?autoplay=1&loop=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/AMekR_EwpOA?autoplay=0&amp;controls=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/AMekR_EwpOA?autoplay=0&amp;controls=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 	</div>
   </body>
 </html>
