Dawits files getting in

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -15,10 +15,15 @@
       href="https://fonts.googleapis.com/css?family=Poppins:200,400,700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/bmm/static/web/css/spectre.css" />
+    <link rel="stylesheet" href="/bmm/static/web/css/bmm-mood-1.css" />
     <link rel="stylesheet" href="/bmm/static/web/css/spectre-icons.css" />
-    <link rel="stylesheet" href="/bmm/static/web/css/spectre-exp.css" />
-    <link rel="stylesheet" href="/bmm/static/web/css/yeo.css" />
+    <link rel="stylesheet" href="/bmm/static/web/css/bmm-mood-2.css" />
+    <link rel="stylesheet" href="/bmm/static/web/css/bmm-mood-0.css" />
+
+    <!-- <link rel="stylesheet" href="/bmm/static/web/css/spectre.css" /> -->
+    <!-- <link rel="stylesheet" href="/bmm/static/web/css/spectre-icons.css" /> -->
+    <!-- <link rel="stylesheet" href="/bmm/static/web/css/spectre-exp.css" /> -->
+    <!-- <link rel="stylesheet" href="/bmm/static/web/css/yeo.css" /> -->
     <meta property="og:title" content="" />
     <meta property="og:url" content="" />
     <meta property="og:description" content="" />
@@ -42,12 +47,13 @@
                     >Bookmark Manager (BMM)</span
                   >
                 </a>
-                <div class="container slogan" class="about-section">
-                  <h2></h2>
+
 
 
             </section>
-            </header>
+            <section class="navbar-section hide-sm">
+                            <a class="btn btn-primary btn-lg btn-startk" href="/about">About</a>
+          </header>
           </div>
         </div>
       </div>
@@ -89,15 +95,18 @@
 
           <div
 
-                  <div>
-                    <span class="slogan-bold">STEPS TO LOAD THE CHROME EXTENSION</span>
-                    <span class="slogan-bold">Download the zip archive and extract</span>
-                    <span class="slogan-bold">Open your Chrome Browser</span>
-                    <span class="slogan-bold">Click on the three vertical dots on top right of your screen</span>
-                    <span class="slogan-bold">Click On Manage Extensions</span>
-                    <span class="slogan-bold">Turn on Developer mode towards the top right of the screen</span>
-                    <span class="slogan-bold">Click on Load unpacked</span>
-                    <span class="slogan-bold">Navigate to the extension directory, and click select</span>
+                  <div class="column col-12 hide-sm">
+                  </div> <h5>
+                    <span class="slogan-bold">STEPS TO LOAD THE CHROME EXTENSION</h5>
+                    <h6>
+                    <span class="slogan-bold">1) STEPS TO LOAD THE CHROME EXTENSION</span>
+                    <span class="slogan-bold">2) Download the zip archive and extract</span>
+                    <span class="slogan-bold">3) Open your Chrome Browser</span>
+                    <span class="slogan-bold">4) Click on the three vertical dots on top right of your screen</span>
+                    <span class="slogan-bold">5) Click On Manage Extensions</span>
+                    <span class="slogan-bold">6) Turn on Developer mode towards the top right of the screen</span>
+                    <span class="slogan-bold">7) Click on Load unpacked</span>
+                    <span class="slogan-bold">8) Navigate to the extension directory, and click select</span><h6>
 
                   </div>
                 </div>
