--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -11,9 +11,11 @@
 <body>
     <!--header structure-->
     <header>
-        <a href="index.html">
-            <img src="../img/logo4_(5).png" alt="Logo">
-        </a>
+        <div class="logo-container">
+            <img src="../img/logo4 (5).png" alt="Logo" class="logo"> 
+        </div>
+        <div class="separator"> </div>
+            <div class="bookmark-manager">BOOKMARK MANAGER</div>
         <div class="user-menu">
             <div class="profile-icon"></div>
             <div class="dropdown">
@@ -32,19 +34,23 @@
                 <label for="url">URL</label>
                 <input type="text" id="url" placeholder="URL">
             </div>
+             <div class="form-group">
+                <label for="description">DESCRIPTION</label>
+                <input type="text" id="description" placeholder="description">
+            </div>
             <div class="form-group">
                 <label for="category-dropdown">CATEGORY</label>
                 <select id="category-dropdown">
                     <option value="default">Select Category</option>
                 </select>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="tags">TAGS</label>
                 <div class="tags-container"></div>
                 <select id="tags-dropdown">
                     <option value="default">Select Tags</option>
                 </select>
-            </div>
+            </div>  -->
             <button class="create-button">Create</button>
         </div>
     </div>
