--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -59,7 +59,7 @@
             <div class="sidebar-header">
                 <!-- <label for="category-dropdown">FILTERS</label> -->
                 <select id="category-dropdown">
-                    <option value="categories">Categories</option>
+                    <option value="categories" class="current">Categories</option>
                     <option value="filter-tags">Filter:Tags</option>
                     <option value="filter-category-tags">Filter:Category/Tags</option>
                 </select>
