--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -69,8 +69,8 @@
                 </select>
             </div>
             <div class="add-buttons">
-                <button class="add-categories-btn">+ CATEGORIES</button>
-                <button class="add-tag-btn">+ TAG</button>
+                <div class="add-categories-btn">+ CATEGORIES</div>
+                <div class="add-tag-btn">+ TAG</div>
 
             </div>
 
@@ -83,6 +83,6 @@
     </div>
 
     <script src="../js/app.js" type="module"></script>
-    <script src="../js/fetch.js" type="module"></script>
+ <!-- <script src="../js/fetch.js" type="module"></script> -->  
 </body>
 </html>
