--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -32,16 +32,16 @@
         <div class="bookmark-form">
             <div class="form-group">
                 <label for="url">URL</label>
-                <input type="text" id="url" placeholder="URL">
+                <input type="text" id="url" placeholder="">
             </div>
              <div class="form-group">
                 <label for="description">DESCRIPTION</label>
-                <input type="text" id="description" placeholder="description">
+                <input type="text" id="description" placeholder="">
             </div>
             <div class="form-group">
                 <label for="category-dropdown">CATEGORY</label>
                 <select id="category-dropdown">
-                    <option value="default">Select Category</option>
+                    <option value="default">DEFAULT</option>
                 </select>
             </div>
             <!-- <div class="form-group">
@@ -55,7 +55,7 @@
         </div>
     </div>
     <div class="container">
-        <aside>
+        <>
             <div class="sidebar-header">
                 <!-- <label for="category-dropdown">FILTERS</label> -->
                 <select id="category-dropdown">
@@ -94,6 +94,6 @@
     </div>
 
     <script src="../js/app.js" type="module"></script>
- <!-- <script src="../js/fetch.js" type="module"></script> -->  
+ <!-- <script src="../js/fetch.js" type="module"></script> -->
 </body>
 </html>
