Fixed <aside> HTML markup mistake

--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -55,7 +55,7 @@
         </div>
     </div>
     <div class="container">
-        <>
+        <aside>
             <div class="sidebar-header">
                 <!-- <label for="category-dropdown">FILTERS</label> -->
                 <select id="category-dropdown">
