--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -41,7 +41,7 @@
             <div class="form-group">
                 <label for="category-dropdown">CATEGORY</label>
                 <select id="category-dropdown">
-                    <option value="default">DEFAULT</option>
+                    <option value="default" class="current">DEFAULT</option>
                 </select>
             </div>
             <!-- <div class="form-group">
