--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -39,19 +39,21 @@
                 <input type="text" id="description" placeholder="">
             </div>
             <div class="form-group">
-                <label for="category-dropdown">CATEGORY</label>
+				<label for="category-dropdown">CATEGORY</label>
                 <select id="category-dropdown">
-                    <option value="default" class="current">DEFAULT</option>
+					<option value="default" class="current">DEFAULT</option>
                 </select>
             </div>
             <!-- <div class="form-group">
-                <label for="tags">TAGS</label>
+				<label for="tags">TAGS</label>
                 <div class="tags-container"></div>
                 <select id="tags-dropdown">
-                    <option value="default">Select Tags</option>
+					<option value="default">Select Tags</option>
                 </select>
             </div>  -->
+			<div class="form-group">
             <button class="create-button">Create</button>
+			</div>
         </div>
     </div>
     <div class="container">
