--- a/extension/templates/mainpage.html
+++ b/extension/templates/mainpage.html
@@ -34,28 +34,18 @@
                 <label for="url">URL</label>
                 <input type="text" id="url" placeholder="">
             </div>
-<<<<<<< HEAD
              
-=======
-             <div class="form-group">
-                <label for="description">DESCRIPTION</label>
-                <input type="text" id="description" placeholder="">
-            </div>
->>>>>>> 3d42012231e2bfff86ae046862feb7dc647f3472
+
             <div class="form-group">
 				<label for="category-dropdown">CATEGORY</label>
                 <select id="category-dropdown">
-<<<<<<< HEAD
-                    <option value="default" id="category-dropdown">Select Category</option>
-=======
 					<option value="default" class="current">DEFAULT</option>
->>>>>>> 3d42012231e2bfff86ae046862feb7dc647f3472
                 </select>
             </div>
 
              <div class="form-group">
                 <label for="description">TITLE</label>
-                <input type="text" id="description" placeholder="DESCRIPTION">
+                <input type="text" id="description" placeholder="TITLE">
             </div>
      
             <!-- <div class="form-group">
@@ -74,13 +64,8 @@
         <aside>
             <div class="sidebar-header">
                 <!-- <label for="category-dropdown">FILTERS</label> -->
-<<<<<<< HEAD
-                <select id="category-dropdowns">
-                    <option value="categories">Categories</option>
-=======
                 <select id="category-dropdown">
                     <option value="categories" class="current">Categories</option>
->>>>>>> 3d42012231e2bfff86ae046862feb7dc647f3472
                     <option value="filter-tags">Filter:Tags</option>
                     <option value="filter-category-tags">Filter:Category/Tags</option>
                 </select>
